<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/enter_new_pin_title" />

        <EditText
            android:id="@+id/current_pin_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/current_pin_hint"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxLength="12" />

        <EditText
            android:id="@+id/new_pin_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/pin_hint"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxLength="12" />

        <EditText
            android:id="@+id/confirm_pin_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_pin_label"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxLength="12" />

        <Button
            android:id="@+id/update_pin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/update_pin_button" />

    </LinearLayout>
</ScrollView>
